--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Max Reuter"
   pronouns         : # example: "she/her"  
-  bio              : "M.S. student focusing on AI robustness and safety."
+  bio              : "M.S. student at Michigan State University focusing on AI robustness and safety."
   location         : "East Lansing, MI"
   employer         : "Michigan State University"
   uri              : # URL
