--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "M.S. student at Michigan State University focusing on AI robustness and safety."
   location         : "East Lansing, MI"
   employer         : "Michigan State University"
-  uri              : # URL
+  uri              : "https://drive.google.com/file/d/1tjnH0nAT08h4nHKp1bgmPEZYSor3lIVm/view?usp=share_link" # URL
   email            : "reuterm1@msu.edu" 
 
   # Academic websites
