--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Max Reuter"
   pronouns         : # example: "she/her"  
-  bio              : "M.S. student at Michigan State University focusing on AI robustness and safety."
+  bio              : "M.S. student at Michigan State University focusing on AI trustworthiness."
   location         : "East Lansing, MI"
   employer         : "Michigan State University"
   uri              : "https://drive.google.com/file/d/1tjnH0nAT08h4nHKp1bgmPEZYSor3lIVm/view?usp=share_link" # URL
