--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Max Reuter's Homepage"
-title_separator          : "-"
+title                    : # "Max Reuter's Homepage"
+title_separator          : # "-"
 name                     : &name "Max Reuter"
 description              : &description "personal description"
 url                      : https://maxwellreuter.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
